# AI-Wrapper

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  ZSR.Underwriting.sln  _ul  deploy.ps1  pyproject.toml
.claude/commands/conductor/: complete.md  implement.md  newTrack.md  setup.md  status.md  sync.md
.claude/skills/skill-creator/: SKILL.md
.codex/: config.toml
.cursor/: mcp.json
.cursor/commands/: conductor-sync.toml
.gemini/: settings.json
.gemini/skills/playground/: SKILL.md
app/: config.py  main.py
app/models/: document.py
app/routers/: documents.py  generate.py
app/services/: ai_generator.py  prompts.py
app/templates/: base.html  index.html  meeting_notes_form.html
conductor/: .migration-v4-complete  product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: README.md
conductor/playground/: chat-ui-explorer.html  cre-prompt-explorer.html  zsr-ui-prototype.html
forge/: .migration-complete  .migration-dirs-complete  .migration-v5-complete  setup_state.json  tracks.md
src/ZSR.Underwriting.Application/: Class1.cs  ZSR.Underwriting.Application.csproj
src/ZSR.Underwriting.Domain/: Class1.cs
src/ZSR.Underwriting.Infrastructure/: Class1.cs  ZSR.Underwriting.Infrastructure.csproj
src/ZSR.Underwriting.Web/: Program.cs  ZSR.Underwriting.Web.csproj  appsettings.Development.json  appsettings.json
tests/: test_api.py  test_services.py
tests/ZSR.Underwriting.Tests/: ApplicationSmokeTests.cs  NuGetPackageTests.cs  UnitTest1.cs  WebAppCollection.cs  ZSR.Underwriting.Tests.csproj
(+664 files in other folders)
